# stationarityToolkit

./: .coverage  .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py  case1_noise_report.md  case3_trend_report.md  case4_seasonal_report.md  case5_variance_report.md  case6_clustered_report.md  detailed_usage.ipynb  detailed_usage.md  stationarity_report.md  walmart_report.md
paper/: paper.bib  paper.md
src/stationarity_toolkit/: __init__.py  results.py  stationarity_toolkit.py  toolkit.py  utils.py
src/stationarity_toolkit/tests/: __init__.py  seasonal.py  trend.py  variance.py
src/stationarity_toolkit_v2/: __init__.py  config.py  results.py  toolkit.py
src/stationarity_toolkit_v2/tests/: __init__.py  trend_tests.py  variance_tests.py
src/stationarity_toolkit_v2/transformations/: __init__.py  trend_transformations.py  variance_transformations.py
tests/: conftest.py  stationarity_toolkit_test.py  test_config.py  test_edge_cases.py  test_integration.py  test_results.py  test_seasonal.py  test_toolkit_integration.py  test_transformations.py  test_trend.py  test_trend_tests.py  test_utils.py  test_variance.py  test_variance_tests.py
