[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stationaritytoolkit"
version = "0.2.0"
authors = [
  { name="Bhanu Suraj Malla", email="bsmalla@asu.edu" },
]
description = "Test and Convert non-stationary time-series to stationary with proper variance and trend tests"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "arch>=5.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "matplotlib>=3.4.0",
]

[project.urls]
"Homepage" = "https://github.com/mbsuraj/stationarityToolkit"
"Bug Tracker" = "https://github.com/mbsuraj/stationarityToolkit/issues"