[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stationaritytoolkit"
version = "1.0.0"
authors = [
  { name="Bhanu Suraj Malla", email="bsmalla@asu.edu" },
]
description = "Comprehensive time series stationarity analysis with rigorous statistical testing across trend, variance, and seasonality"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "arch>=5.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "matplotlib>=3.4.0",
]

[project.urls]
"Homepage" = "https://github.com/mbsuraj/stationarityToolkit"
"Bug Tracker" = "https://github.com/mbsuraj/stationarityToolkit/issues"